# calls_summery

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  dump.rdb  entrypoint.sh  environment.yml  paragraphs.json  pyproject.toml  railway.json  requirements.txt  run_api.bat  run_celery.bat  start.bat  stop.bat
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
agent/: config.py  uploader.py  watcher.py
alembic/: env.py
alembic/versions/: 0bd53e10f1f5_add_users_and_api_keys_tables_add_user_.py  42bc80de2aa4_initial_schema.py  a3f7e2c91d4b_add_contacts_structured_actions_search.py
deploy/: setup-ec2.sh
desktop/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.node.json  vite.config.ts
desktop/electron/: main.ts  preload.ts  uploader.ts  watcher.ts
desktop/src/: App.tsx  styles.css
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/constants/: Colors.ts
src/: app.py
src/api/: deps.py  main.py
src/config/: logging.py  plan_limits.py  settings.py
src/models/: __init__.py  api_key.py  call.py  contact.py  database.py  notification.py  settings.py  summary.py  transcription.py  user.py
src/pages/: 00_auth.py  01_upload.py  02_calls.py  03_summary.py  04_settings.py  05_notifications.py  06_api_keys.py
src/repositories/: base.py  call_repository.py  contact_repository.py  notification_repository.py  summary_repository.py  transcription_repository.py
tests/: conftest.py
(+105 files in other folders)
